--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ classifiers = [
 ]
 dependencies = [
     "rich>=13.0.0",
+    "questionary>=2.0.0",
     "tomli-w>=0.2.0",
     "tomli>=2.0.0; python_version < '3.11'",
 ]
